--- a/.github/workflows/locker.yml
+++ b/.github/workflows/locker.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   main:
     runs-on: ubuntu-latest
+    permissions: write-all
     steps:
       - name: Checkout Actions
         uses: actions/checkout@v2
