--- a/.github/workflows/ci-main.win.yml
+++ b/.github/workflows/ci-main.win.yml
@@ -2,9 +2,9 @@ name: CI (Windows)
 
 on:
   push:
-    branches: [ main ]
+    branches: [ foo ]
   pull_request:
-    branches: [ main ]
+    branches: [ foo ]
 
 jobs:
   build:
